--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 .txtbx{
   background: rgb(156, 156, 212);
   border: 1px solid black;
-  width: 75%;
+  width: 65%;
   height: 500px;
   margin: auto;
 }
@@ -13,15 +13,15 @@
 }
 .btn{
   text-align: center;
-  /* width: 50px; */
+  width: 50px;
   font:bold ;
-  background: blueviolet;
+  /* background: blueviolet; */
   
 }
 
 .line{
   border: 1px solid black;
-  width: 150px;
+  width: 190px;
   margin:auto ;
 }
 
@@ -32,13 +32,43 @@
   border-radius: 10px;
   border: 1px solid black;
   background: wheat;
-  width: 250px;
-  height: 400px;
+  width: 235px;
+  height: 435px;
   float: left;
   /* margin: auto; */
-  margin: 45px 35px 35px 45px;
+  margin: 35px 25px 35px 25px;
 }
 
 .list{
   margin: 10px 0px 10px 0px;
+  li:before { 
+    content:"\2713\0020";
+    
+   }
+  
+.hide{
+
+  text-transform: none;
+  
+}
+
+.close{
+  li:before 
+/* { content: '\2715'; } */
+{  content: '\2713\00D7'; }
+}
+
+.element:before {
+  content: "d7";
+}
+
+}
+ul {
+  list-style-type: none;
+}
+.btn-primary{
+  width: 200px;
+  display: block;
+  margin: auto;
+  border-radius: 15px;
 }
