--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ li{
 
 .nav{
   float: inline-end;
-  background-image: url('./image/GUVI_logo.png');
+  background-image: url('https://upload.wikimedia.org/wikipedia/commons/0/08/GUVI_logo.png');
   width: 100px;
   height: 34px;
   margin: 20px;
